src/test/deca/syntax/valid/parser/extension/declaration_2_dimensions.deca
{
    float[][] array = new float [2][6];
}