src/test/deca/syntax/invalid/parser/extension/TAB_return_wrong_defined2.deca
class A{
    float[][ ] f(){
        return new float[2][2];
    }
}